# kdrivermanagement

./: .gitignore  CMakeLists.txt  LibKDriverManagementConfig.cmake.in  Readme.md  deviceenumerator.h  suitabledriver.cpp
cmake/: findLDM.cmake
declarative/: qmldir
kded/: CMakeLists.txt  devicedetector.cpp  devicedetector.h  kdrivermanagement.desktop
kdm-daemon/: CMakeLists.txt
kdm-daemon/libkdrivermanagement/: deviceenumerator.cpp  deviceenumerator.h  kdrivermanagementconstants.h  suitabledriver.cpp
kdm-daemon/libkdrivermanagement/cmake/: findLDM.cmake
kdm-daemon/libkdrivermanagement/declarative/: kdrivermanagementplugin.cpp  kdrivermanagementplugin.h
kdm-daemon/libkdrivermanagement/kded/: devicedetector.cpp  devicedetector.h
kdm-kcm/: CMakeLists.txt  Version.h.cmake  kcm_kdm.desktop  org.kde.kdm.KDriverManager.xml
kdm-kcm/src/: CMakeLists.txt  KDriverWidget.cpp  KDriverWidget.h  Module.cpp  Module.h  kcm_KDriverManager.desktop  kdrivermanager.cpp  kdrivermanager.h  kdrivermanagerdbusinterface.cpp  kdrivermanagerdbusinterface.h  main.cpp  manager.cpp  manager.h  org.kde.kdrivermanager.KDriverManager.xml
libkdrivermanagement/: CMakeLists.txt  LibKDriverManagementConfig.cmake.in  deviceenumerator.cpp  deviceenumerator.h  suitabledriver.h
libkdrivermanagement/declarative/: CMakeLists.txt  kdrivermanagementplugin.cpp  kdrivermanagementplugin.h
libkdrivermanagement/kded/: CMakeLists.txt  devicedetector.cpp  kdrivermanagement.desktop
